--- a/EagleBarista.csproj
+++ b/EagleBarista.csproj
@@ -14,7 +14,6 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.3.0f3</UnityVersion>
@@ -254,6 +253,9 @@
     <Reference Include="UnityEditor.Graphs">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.Android.Extensions">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
@@ -283,9 +285,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Brewer\BrewerButton.cs" />
-    <Compile Include="Assets\Scripts\Brewer\Cofee_Brewer.cs" />
+    <Compile Include="Assets\Scripts\Brewer\CoffeeBrewer.cs" />
     <Compile Include="Assets\Scripts\Brewer\CupTrigger.cs" />
+    <Compile Include="Assets\Scripts\Brewer\InteractableButton.cs" />
+    <Compile Include="Assets\Scripts\CoffeeCupDispensory.cs" />
+    <Compile Include="Assets\Scripts\CoffeeGrinder.cs" />
     <Compile Include="Assets\Scripts\Eagle\Eagle_Flight.cs" />
     <Compile Include="Assets\Scripts\Eagle\Talons_Grabbing.cs" />
     <Compile Include="Assets\Scripts\Fluid.cs" />
